--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-themes": "^0.3.0",
     "numeral": "^2.0.6",
     "postgres": "^3.4.4",
     "react": "^18",
